Working code after cleaning